client-react-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-client-react-deployment
  labels:
    app: chatapp-client-react
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chatapp-client-react
  template:
    metadata:
      labels:
        app: chatapp-client-react
    spec:
      containers:
        - name: chatapp-client-react
          image: mubbaseer/chatapp-client-react
          ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: chatapp-client-react-service
spec:
  type: LoadBalancer
  selector:
    app: chatapp-client-react
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
