server-node-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-server-nodejs-deployment
  labels:
    app: chatapp-server-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chatapp-server-nodejs
  template:
    metadata:
      labels:
        app: chatapp-server-nodejs
    spec:
      containers:
        - name: chatapp-server-nodejs
          image: mubbaseer/chatapp-server-nodejs 
          ports:
          - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: chatapp-server-nodejs-service
spec:
  type: LoadBalancer
  selector:
    app: chatapp-server-nodejs
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
