chatapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    # - host: your-domain.com  # Replace with your domain
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: chatapp-server-nodejs-service
                port:
                  number: 3001
          - path: /frontend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: chatapp-client-react-service
                port:
                  number: 3000
